# htcbot_debug_src

./: .gitignore  .gitmodules  INSTALL.md  README.md
.bin/: sync_2_home_vm.sh  (+7 more)
control/pure_pursuit/: CMakeLists.txt  package.xml
control/pure_pursuit/include/: pure_pursuit.h
control/pure_pursuit/params/: config_htcbot.yaml
control/pure_pursuit/src/: pure_pursuit.cpp  pure_pursuit_core.cpp  pure_pursuit_node.cpp  pure_pursuit_viz.cpp
core/localizer/htcbot_localizer/: CMakeLists.txt  package.xml
core/localizer/htcbot_localizer/cfg/: ndt_localizer_pro.cfg
core/localizer/htcbot_localizer/include/: ndt_localizer_pro.h
core/localizer/htcbot_localizer/launch/: ndt_localizer_pro.launch
core/msgs/htcbot_msgs/: CMakeLists.txt
core/msgs/htcbot_msgs/msg/: ConfEuclideanCluster.msg  ConfNdtLocalizer.msg  ConfNdtMapping.msg  ConfObstacleDetection.msg  GnssModeSwitch.msg  Lane.msg  LaserDetect.msg  StatusHtcbotModule.msg
core/msgs/htcbot_msgs/srv/: GnssSetBasePoint.srv  SwitchStatusSrv.srv
core/perception/laser_detector/: CMakeLists.txt
core/perception/laser_detector/cfg/: laser_detector.cfg
core/perception/laser_detector/include/: laser_detector.h
core/perception/laser_detector/src/: laser_detector.cpp
core/plugins/htcbot_control/: CMakeLists.txt
core/plugins/htcbot_control/src/: HtcbotControl.cpp
core/sensor/gnss/nmea_navsat_driver/: README.md  package.xml
core/tools/demo_tools/: CMakeLists.txt
core/tools/demo_tools/cfg/: cpp_demo.cfg
core/tools/demo_tools/include/: cpp_base.h  cpp_demo.h
core/tools/map_tools/: CMakeLists.txt
core/tools/waypoint_tools/: package.xml
core/tools/waypoint_tools/cfg/: waypoint_saver.cfg
core/tools/waypoint_tools/include/: waypoint_common.h  waypoint_saver.h
core/tools/waypoint_tools/launch/: waypoint_loader.launch
drivers/can_module_usb2can/: CMakeLists.txt  README.md  package.xml
drivers/can_module_usb2can/include/: MsgBase.h  MsgJD03.h  MsgMMWare.h  usb2can_core.h
drivers/can_module_usb2can/launch/: can_bridge_jd01.launch  can_bridge_nwd.launch  can_bridge_usb2can.launch
drivers/can_module_usb2can/src/: Msg.cpp  MsgBase.cpp  MsgNWD.cpp
drivers/ultrasonic_driver/: CMakeLists.txt  README.md
drivers/ultrasonic_driver/cfg/: dyp_ultrasonic.cfg
drivers/ultrasonic_driver/launch/: dyp_ultrasonic.launch
drivers/ultrasonic_driver/msg/: UltraSonicDetect.msg
drivers/ultrasonic_driver/scripts/: dyp_ultrasonic_node.py
htcbot_common/: CMakeLists.txt
htcbot_common/enums/: htcbot_enum.py
htcbot_mapping/: CMakeLists.txt  package.xml
htcbot_mapping/cfg/: ndt_mapping_pro.cfg
htcbot_mapping/include/: ndt_common.h
htcbot_mapping/launch/: ndt_mapping_pro.launch
htcbot_mapping/nodes/ndt_mapping_pro/: ndt_mapping_pro.cpp  ndt_mapping_pro_node.cpp
laser_detector/: package.xml
laser_detector/cfg/: laser_detector.cfg
laser_detector/include/: laser_detector.h
laser_detector/launch/: laser_detector copy.launch  laser_detector.launch
laser_detector/src/: laser_detector.cpp  laser_detector_node.cpp  laser_detector_node__.cpp
media_tools/: CMakeLists.txt  README.md  package.xml
media_tools/cfg/: camera_play.cfg
media_tools/scripts/: camera_play_node.py  voice_play_node.py
other/height_sure/: height_sure.launch  package.xml
other/height_sure/src/: height_sure_node.cpp
other/trans_lidar_and_rtk/cal_angle/: CMakeLists.txt  package.xml
perception/laser_euclidean_cluster/: CMakeLists.txt
perception/laser_euclidean_cluster/cfg/: laser_euclidean_cluster.cfg
perception/laser_euclidean_cluster/launch/: laser_euclidean_cluster.launch
perception/laser_euclidean_cluster/src/: cluster.cpp  laser_euclidean_cluster.cpp
pid_control/: CMakeLists.txt  package.xml
pid_control/include/: pid_control.h
pid_control/launch/: pid_control.launch
pid_control/src/: pid_control_node.cpp
planning/op_local_planner/: CMakeLists.txt
planning/op_local_planner/cfg/: op_local_planner.cfg
planning/op_local_planner/include/: op_common.h  op_trajectory_evaluator.h  op_utils.h
planning/op_local_planner/src/: op_utils.cpp
points_tools/: CMakeLists.txt  package.xml
points_tools/cfg/: plane_ground_filter.cfg
points_tools/include/: plane_ground_filter.h
points_tools/launch/: plane_ground_filter.launch  ring_ground_filter.launch
points_tools/nodes/plane_ground_filter/: plane_ground_filter_node.cpp
points_tools/nodes/ring_ground_filter/: ring_ground_filter.cpp
points_tools/rviz/: plane_ground_filter.rviz
system_control/: CMakeLists.txt  package.xml
system_control/cfg/: status_control.cfg
system_control/launch/: status_control.launch
system_control/scripts/: status_control_node.py
tools/gnss_tools/: CMakeLists.txt  package.xml
tools/waypoint_tools/: CMakeLists.txt
tools/waypoint_tools/launch/: waypoint_loader.launch  waypoint_saver.launch
trans_lidar_and_rtk/rotate_pointcloud/: CMakeLists.txt  package.xml
trans_lidar_and_rtk/rotate_pointcloud/src/: rotate_pointcloud.cpp
turn_htcbot/: CMakeLists.txt  package.xml
turn_htcbot/cfg/: auto_start.cfg
turn_htcbot/config/: htcbot_A0003.yaml  htcbot_A0003_test.yaml  htcbot_A0004.yaml  htcbot_A0004_test.yaml  htcbot_csxzx.yaml  htcbot_test.yaml
turn_htcbot/launch/: turn_on.launch  turn_on_A0003.launch  turn_on_A0004.launch  turn_on_whthjc.launch
turn_htcbot/launch/include/: auto_start.launch  camera_htc.launch  gnss_htc.launch  imu_htc.launch  lidar_htc.launch  model_htc.launch  ultrasonic_htc.launch
turn_htcbot/launch/pre/: test_A0003.launch  test_A0004.launch
turn_htcbot/launch/test/: test_camera_play.launch  test_csxzx_and_waypoint.launch  test_detect.launch  test_gateway.launch  test_htcbot.launch  test_localizer.launch  test_mapping.launch  test_navigation.launch  test_vehicle.launch  test_whthjc.launch
turn_htcbot/rviz/: htcbot.rviz  htcbot_csxzx.rviz  htcbot_debug.rviz  htcbot_whthjc.rviz  test_camera_play.rviz  test_detect.rviz  test_localizer.rviz  test_mapping.rviz  test_model.rviz  test_navigation.rviz
turn_htcbot/scripts/: auto_start.py
turn_htcbot/udev/rule.d/: htc_udev.sh
turn_htcbot/urdf/: htcbot_yunle_jd01.urdf
(+332 files in other folders)
