<?xml version="1.0"?>
<package format="2">
  <name>htcbot_mapping</name>
  <version>0.0.0</version>
  <description>The htcbot_mapping package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="code@todo.todo">code</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>ndt_cpu</build_depend>
  <build_depend>pcl_omp_registration</build_depend>
  <build_depend>htcbot_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>ndt_cpu</build_export_depend>
  <build_export_depend>pcl_omp_registration</build_export_depend>
  <build_export_depend>htcbot_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>ndt_cpu</exec_depend>
  <exec_depend>pcl_omp_registration</exec_depend>
  <exec_depend>htcbot_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  
  <export>
  </export>
</package>
