<?xml version="1.0"?>
<package>
  <name>laser_detector</name>
  <version>0.0.1</version>
  <description>The laser_detector package</description>

  <maintainer email="auto.hongda@gmail.com">LitoNeo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>htcbot_msgs</build_depend>
  <build_depend>htcbot_msgs</build_depend>
  <build_depend>htcbot_common</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>  

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>htcbot_msgs</run_depend>
  <run_depend>htcbot_msgs</run_depend>
  <run_depend>htcbot_common</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>  

</package>
