<?xml version="1.0"?>
<package>
  <name>height_sure</name>
  <version>0.0.1</version>
  <description>The height_sure package</description>
  <maintainer email="18319175806@163.com">Maintainer Name</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
