cmake_minimum_required(VERSION 3.0.2)
project(htcbot_control)

find_package(catkin REQUIRED COMPONENTS
  sensor_msgs
  geometry_msgs
  nav_msgs
  roscpp
  rviz
  visualization_msgs
  htcbot_msgs
)

find_package(PCL REQUIRED)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES rviz_path_generator
#  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rviz visualization_msgs
#  DEPENDS system_lib
)

include_directories(
  # include
  ${catkin_INCLUDE_DIRS}
  ${PCL_INCLUDE_DIRS}
)

link_directories(${catkin_LIBRARY_DIRS} ${PCL_LIBRARIES})

set(CMAKE_AUTOMOC ON)

if(rviz_QT_VERSION VERSION_LESS "5")
  message(STATUS "Using Qt4 based on the rviz_QT_VERSION: ${rviz_QT_VERSION}")
  find_package(Qt4 ${rviz_QT_VERSION} EXACT REQUIRED QtCore QtGui)
  ## pull in all required include dirs, define QT_LIBRARIES, etc.
  include(${QT_USE_FILE})
else()
  message(STATUS "Using Qt5 based on the rviz_QT_VERSION: ${rviz_QT_VERSION}")
  find_package(Qt5 ${rviz_QT_VERSION} EXACT REQUIRED Core Widgets)
  ## make target_link_libraries(${QT_LIBRARIES}) pull in all required dependencies
  set(QT_LIBRARIES Qt5::Widgets)
endif()
## I prefer the Qt signals and slots to avoid defining "emit", "slots",
## etc because they can conflict with boost signals, so define QT_NO_KEYWORDS here.
add_definitions(-DQT_NO_KEYWORDS)

set(HDR_FILES
  src/HtcbotControl.h
  src/NavigationPanel.h
  src/ParamsPanel.h
)

set(SRC_FILES
  src/HtcbotControl.cpp 
  src/NavigationPanel.cpp
  src/ParamsPanel.cpp
  ${MOC_FILES}
)

add_library(${PROJECT_NAME} ${SRC_FILES} ${HDR_FILES})
target_link_libraries(${PROJECT_NAME} 
                      ${QT_LIBRARIES} 
                      ${catkin_LIBRARIES} 
                      ${catkin_INCLUDE_DIRS}
                      ${PCL_LIBRARIES})

install(TARGETS
  ${PROJECT_NAME}
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

install(FILES 
  plugin_description.xml
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})