<?xml version="1.0"?>
<package format="2">
  <name>cal_angle</name>
  <version>0.0.0</version>
  <description>A sample package for rotating point clouds in the XOY plane</description>

  <maintainer email="your@email.com">yourname</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
